--- a/Semestrovka/Semestrovka/Semestrovka.csproj
+++ b/Semestrovka/Semestrovka/Semestrovka.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0" />
         <PackageReference Include="Npgsql" Version="4.1.2" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
     </ItemGroup>
 
 </Project>
