--- a/Semestrovka/Semestrovka/Semestrovka.csproj
+++ b/Semestrovka/Semestrovka/Semestrovka.csproj
@@ -1,14 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
         <UserSecretsId>aspnet-Semestrovka-D9326656-DA6D-48D5-B003-F46FC2087A5B</UserSecretsId>
     </PropertyGroup>
-
-
-    <ItemGroup>
-        <None Update="app.db" CopyToOutputDirectory="PreserveNewest" />
-    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.0.0" />
